# ButterFi

./: .gitignore  README.md  template.yaml
docs/: firmware-build.md  self-hosted-owner-setup.md  shared-protocol.md  xiao-batch-provisioning.md  xiao-build.md  xiao-integration-notes.md
firmware/rak4630/: README.md  integration-map.md
firmware/rak4630/include/: butterfi_platform_shim.h  butterfi_protocol.h  butterfi_rak_adapter.h  butterfi_rak_port.h  butterfi_session.h  butterfi_sidewalk_shim.h
firmware/rak4630/src/: butterfi_platform_shim.c  butterfi_protocol.c  butterfi_rak_adapter.c  butterfi_rak_port.c  butterfi_session.c  butterfi_sidewalk_shim.c
firmware/xiao_nrf52840/: CMakeLists.txt  README.md  app.overlay  pm_static.yml  prj.bt-debug.conf  prj.conf  prj.sidewalk-debug-assert-core.conf  prj.sidewalk-debug-assert-handler.conf  prj.sidewalk-debug-assert-persist.conf  prj.sidewalk-debug-noassert.conf  prj.sidewalk-debug-nonblocking.conf  prj.sidewalk-debug-pal-noassert.conf  prj.sidewalk-debug-zephyr-noassert.conf  prj.sidewalk-debug.conf  prj.sidewalk-module-debug.conf  prj.sidewalk.conf
firmware/xiao_nrf52840/.sdk-layout/: sidewalk  zephyr
firmware/xiao_nrf52840/src/: butterfi_config.c  butterfi_config.h  butterfi_content.c  butterfi_content.h  butterfi_usb.c  butterfi_usb.h  main.c
scripts/: build-batch-package.py  build-rak4630.sh  build-sidewalk-credential.py  build-xiao.sh  probe-butterfi-status.py  probe-cdc-echo.py  with-ncs-env.sh
web/: README.md  app.js  index.html  manifest.webmanifest  provision.html  styles.css  sw.js
